--- a/404.html
+++ b/404.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='404.css'>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
-</head>
-<body>
-    <figure>
-        <figcaption>
-            <span class="sr-text">Error 404: Not Found</span>
-            <span class="_4"></span>
-            <span class="_0"></span>
-            <span class="_4"></span>
-            <span class="n"></span>
-            <span class="o"></span>
-            <span class="t"></span>
-            <span class="f"></span>
-            <span class="o"></span>
-            <span class="u"></span>
-            <span class="n"></span>
-            <span class="d"></span>
-        </figcaption>
-    </figure>
-</body>
+<!-- The project homescreen -->
+
+<html>
+  <head>
+    <title>
+      The TaskMaster project
+    </title>
+
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+
+    <div class="top-bit">
+      <h1>TaskMaster 9000</h1>
+      <h3> A task organizer for everyone </h3>
+      <br>
+      <a href="/app"><button> Go to TaskMaster</button></a>
+    </div>
+    <br><br>
+    <div class="bottom-bit">
+      <a href="https://github.com/taskmaster9000/taskmaster9000.github.io">Source at github</a>
+      <span>There are no bugs, only features</span>
+      <span>Made by the RGB IT cell</span>
+    </div>
+  </body>
 </html>
